# fastapi_alembic_boilerplate

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: config.py  database.py  database_manager.py  main.py
app/api/: __init__.py  auth.py  users.py
app/auth/dto/: auth.py
app/auth/models/: jwt_storage.py
app/auth/repositories/: jwt_repository.py
app/auth/routers/: auth_router.py
app/auth/services/: auth_service.py
app/core/: __init__.py  config.py  dependencies.py  errors.py  logging.py  security.py
app/core/database/: database.py  database_manager.py
app/core/models/: __init__.py  base.py  base_model.py
app/dto/: base_response.py
app/models/: __init__.py  jwt_storage.py  user.py
app/repositories/: __init__.py  jwt_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  base.py  user.py
app/services/: __init__.py  auth_service.py  user_service.py
app/users/: __init__.py
app/users/dto/: __init__.py  user_dto.py
app/users/models/: __init__.py  user.py
app/users/repositories/: __init__.py  user_repository.py
app/users/routers/: user_router.py
app/users/services/: __init__.py  user_service.py
app/utils/: date_handler.py
scripts/: migrate.py
tests/: conftest.py  factories.py
tests/auth/: test_auth_router.py  test_models.py
tests/core/: test_config.py  test_security.py
tests/users/: test_models.py  test_user_router.py
tests/utils/: test_date_handler.py
